packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__envio_dts_code_generated_for_evm.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: project_template.envio_dts_code
---
export type EvmChains = {
  "ethereumMainnet": { id: 1 };
};
export type Contract1_NewGravatar_block = { number: number; timestamp: number; hash: string };
export type Contract1_NewGravatar_transaction = {};
export type Contract1_UpdatedGravatar_block = { number: number; timestamp: number; hash: string };
export type Contract1_UpdatedGravatar_transaction = {};
export type EvmContracts = {
  "Contract1": {
      "NewGravatar": { transaction: Contract1_NewGravatar_transaction; block: Contract1_NewGravatar_block };
      "UpdatedGravatar": { transaction: Contract1_UpdatedGravatar_transaction; block: Contract1_UpdatedGravatar_block };
  };
};
export type EvmEvent<
  C extends keyof EvmContracts = keyof EvmContracts,
  N extends keyof EvmContracts[C] = keyof EvmContracts[C],
> = Extract<
  | { contractName: "Contract1"; name: "NewGravatar"; params: { id: bigint; owner: Address; displayName: string; imageUrl: string } }
  | { contractName: "Contract1"; name: "UpdatedGravatar"; params: { id: bigint; owner: Address; displayName: string; imageUrl: string } }
  , { contractName: C; name: N }
>;
export type FuelChains = {};
export type FuelEvents = {};
export type SvmChains = {};
export type Enums = {
  "Status": "ACTIVE" | "INACTIVE";
};
export type Entities = {
  "EmptyEntity": {
    readonly "id": string;
    readonly "emptyField": string;
    readonly "status": Enums["Status"];
    readonly "optionalStatus": Enums["Status"] | undefined;
    readonly "related_id": string;
    readonly "optionalRelated_id": string | undefined;
    readonly "tags": readonly string[];
    readonly "optionalTags": readonly string[] | undefined;
  };
  "RelatedEntity": {
    readonly "id": string;
    readonly "name": string;
  };
};
