packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__envio_dts_code_generated_for_fuel.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: project_template.envio_dts_code
---
export type EvmChains = {};
export type EvmEvents = {};
export type EvmEventNameMap = {};
export type EvmEvent = never;
export type FuelChains = {
  "0": { id: 0 };
};
export type Greeter_NewGreeting_block = { number: number; timestamp: number; hash: string; id: string; height: number; time: number };
export type Greeter_NewGreeting_transaction = { id: string };
export type Greeter_ClearGreeting_block = { number: number; timestamp: number; hash: string; id: string; height: number; time: number };
export type Greeter_ClearGreeting_transaction = { id: string };
export type FuelEvents = {
  "Greeter": {
      "NewGreeting": { transaction: Greeter_NewGreeting_transaction; block: Greeter_NewGreeting_block };
      "ClearGreeting": { transaction: Greeter_ClearGreeting_transaction; block: Greeter_ClearGreeting_block };
  };
};
export type SvmChains = {};
export type Enums = {};
export type Entities = {
  "EmptyEntity": {
    readonly "id": string;
    readonly "emptyField": string;
  };
};
