packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__envio_types_dts_generated_for_evm.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: project_template.envio_types_dts
---
// This file is generated by HyperIndex codegen from config.yaml and schema.graphql.
// Do not edit manually.
// If your project's types look out of date, run `envio codegen`
// (or your package manager's `codegen` script, e.g. `pnpm codegen`).

import type { Address, BigDecimal, SingleOrMultiple } from "envio";

type EvmBlock = {
  /** The number field. */
  readonly number: number;
  /** The timestamp field. */
  readonly timestamp: number;
  /** The hash field. */
  readonly hash: string;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - parentHash
   * ```
   */
  readonly parentHash: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - nonce
   * ```
   */
  readonly nonce: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - sha3Uncles
   * ```
   */
  readonly sha3Uncles: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - logsBloom
   * ```
   */
  readonly logsBloom: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - transactionsRoot
   * ```
   */
  readonly transactionsRoot: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - stateRoot
   * ```
   */
  readonly stateRoot: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - receiptsRoot
   * ```
   */
  readonly receiptsRoot: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - miner
   * ```
   */
  readonly miner: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - difficulty
   * ```
   */
  readonly difficulty: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - totalDifficulty
   * ```
   */
  readonly totalDifficulty: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - extraData
   * ```
   */
  readonly extraData: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - size
   * ```
   */
  readonly size: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - gasLimit
   * ```
   */
  readonly gasLimit: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - gasUsed
   * ```
   */
  readonly gasUsed: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - uncles
   * ```
   */
  readonly uncles: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - baseFeePerGas
   * ```
   */
  readonly baseFeePerGas: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - blobGasUsed
   * ```
   */
  readonly blobGasUsed: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - excessBlobGas
   * ```
   */
  readonly excessBlobGas: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - parentBeaconBlockRoot
   * ```
   */
  readonly parentBeaconBlockRoot: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - withdrawalsRoot
   * ```
   */
  readonly withdrawalsRoot: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - l1BlockNumber
   * ```
   */
  readonly l1BlockNumber: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - sendCount
   * ```
   */
  readonly sendCount: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - sendRoot
   * ```
   */
  readonly sendRoot: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       block_fields:
   *         - mixHash
   * ```
   */
  readonly mixHash: never;
};
type EvmTransaction = {
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - transactionIndex
   * ```
   */
  readonly transactionIndex: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - hash
   * ```
   */
  readonly hash: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - from
   * ```
   */
  readonly from: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - to
   * ```
   */
  readonly to: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - gas
   * ```
   */
  readonly gas: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - gasPrice
   * ```
   */
  readonly gasPrice: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - maxPriorityFeePerGas
   * ```
   */
  readonly maxPriorityFeePerGas: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - maxFeePerGas
   * ```
   */
  readonly maxFeePerGas: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - cumulativeGasUsed
   * ```
   */
  readonly cumulativeGasUsed: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - effectiveGasPrice
   * ```
   */
  readonly effectiveGasPrice: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - gasUsed
   * ```
   */
  readonly gasUsed: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - input
   * ```
   */
  readonly input: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - nonce
   * ```
   */
  readonly nonce: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - value
   * ```
   */
  readonly value: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - v
   * ```
   */
  readonly v: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - r
   * ```
   */
  readonly r: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - s
   * ```
   */
  readonly s: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - contractAddress
   * ```
   */
  readonly contractAddress: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - logsBloom
   * ```
   */
  readonly logsBloom: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - root
   * ```
   */
  readonly root: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - status
   * ```
   */
  readonly status: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - yParity
   * ```
   */
  readonly yParity: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - accessList
   * ```
   */
  readonly accessList: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - maxFeePerBlobGas
   * ```
   */
  readonly maxFeePerBlobGas: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - blobVersionedHashes
   * ```
   */
  readonly blobVersionedHashes: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - type
   * ```
   */
  readonly type: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - l1Fee
   * ```
   */
  readonly l1Fee: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - l1GasPrice
   * ```
   */
  readonly l1GasPrice: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - l1GasUsed
   * ```
   */
  readonly l1GasUsed: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - l1FeeScalar
   * ```
   */
  readonly l1FeeScalar: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - gasUsedForL1
   * ```
   */
  readonly gasUsedForL1: never;
  /**
   * @deprecated Not selected for this event. To enable, add to config.yaml:
   * ```yaml
   * events:
   *   - event: global
   *     field_selection:
   *       transaction_fields:
   *         - authorizationList
   * ```
   */
  readonly authorizationList: never;
};
declare namespace FuelTypes {}
type Enums = {
  "Status": "ACTIVE" | "INACTIVE";
};
type Entities = {
  "EmptyEntity": {
    readonly "id": string;
    readonly "emptyField": string;
    readonly "status": Enums["Status"];
    readonly "optionalStatus": Enums["Status"] | undefined;
    readonly "related_id": string;
    readonly "optionalRelated_id": string | undefined;
    readonly "tags": readonly string[];
    readonly "optionalTags": readonly string[] | undefined;
  };
  "RelatedEntity": {
    readonly "id": string;
    readonly "name": string;
  };
};

declare module "envio" {
  interface Global {
    config: {
      evm: { chains: {
  "ethereumMainnet": { id: 1 };
      }; contracts: {
  "Contract1": {
    "NewGravatar": {
      /** The name of the event. */
      readonly eventName: "NewGravatar";
      /** The name of the contract that emitted this event. */
      readonly contractName: "Contract1";
      /** The unique identifier of the blockchain network where this event occurred. */
      readonly chainId: 1;
      /** The parameters or arguments associated with this event. */
      readonly params: { readonly id: bigint; readonly owner: Address; readonly displayName: string; readonly imageUrl: string };
      /** The block in which this event was recorded. Configurable via `field_selection` in config.yaml. */
      readonly block: EvmBlock;
      /** The transaction that triggered this event. Configurable via `field_selection` in config.yaml. */
      readonly transaction: EvmTransaction;
      /** The index of this event's log within the block. */
      readonly logIndex: number;
      /** The address of the contract that emitted this event. */
      readonly srcAddress: Address;
    };
    "UpdatedGravatar": {
      /** The name of the event. */
      readonly eventName: "UpdatedGravatar";
      /** The name of the contract that emitted this event. */
      readonly contractName: "Contract1";
      /** The unique identifier of the blockchain network where this event occurred. */
      readonly chainId: 1;
      /** The parameters or arguments associated with this event. */
      readonly params: { readonly id: bigint; readonly owner: Address; readonly displayName: string; readonly imageUrl: string };
      /** The block in which this event was recorded. Configurable via `field_selection` in config.yaml. */
      readonly block: EvmBlock;
      /** The transaction that triggered this event. Configurable via `field_selection` in config.yaml. */
      readonly transaction: EvmTransaction;
      /** The index of this event's log within the block. */
      readonly logIndex: number;
      /** The address of the contract that emitted this event. */
      readonly srcAddress: Address;
    };
  };
      }; eventFilters: {
  "Contract1": {
    "NewGravatar": { readonly params: {} };
    "UpdatedGravatar": { readonly params: {} };
  };
      } };
      entities: Entities;
      enums: Enums;
    };
  }

  export type EmptyEntity = Entities["EmptyEntity"];
  export type RelatedEntity = Entities["RelatedEntity"];
  export type Status = Enums["Status"];
}
