packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__envio_types_dts_generated_for_fuel.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: project_template.envio_types_dts
---
/**
 * This file is generated by HyperIndex codegen from config.yaml and schema.graphql.
 * Do not edit manually.
 * If your project's types look out of date, run `envio codegen`
 * (or your package manager's `codegen` script, e.g. `pnpm codegen`).
 */

import type { Address, BigDecimal, JSON, SingleOrMultiple } from "envio";

/** Marks a block/transaction field that this event's `field_selection` doesn't include.
 * Reading such a field is a type error; the message tells you which field to add to
 * `field_selection` in config.yaml to make it available. */
type FieldNotSelected<Message extends string> = { readonly __fieldNotSelected: Message };

type FuelBlock = { id: string; height: number; time: number };
type FuelTransaction = { id: string };
declare namespace FuelTypes {
  namespace Greeter {
    type type0 = `0x${string}`;
    type type1 = { case: "InvalidContractSender"; payload: FuelTypes.Greeter.type8 } | { case: "ToThrow"; payload: FuelTypes.Greeter.type8 };
    type type2<t> = { case: "None"; payload: FuelTypes.Greeter.type8 } | { case: "Some"; payload: t };
    type type4 = { readonly user: FuelTypes.Greeter.type7 };
    type type5 = { readonly value: FuelTypes.Greeter.type9 };
    type type6 = { readonly user: FuelTypes.Greeter.type7; readonly greeting: FuelTypes.Greeter.type5 };
    type type7 = { readonly bits: FuelTypes.Greeter.type0 };
    type type8 = undefined;
    type type9 = string;
  }
}
type Enums = {};
type Entities = {
  "EmptyEntity": {
    readonly "id": string;
    readonly "emptyField": string;
  };
};

declare module "envio" {
  interface Global {
    config: {
      fuel: { chains: {
  "0": { id: 0 };
      }; contracts: {
  "Greeter": {
    "NewGreeting": {
      /** The name of the event. */
      readonly eventName: "NewGreeting";
      /** The name of the contract that emitted this event. */
      readonly contractName: "Greeter";
      /** The unique identifier of the blockchain network where this event occurred. */
      readonly chainId: 0;
      /** The parameters or arguments associated with this event. */
      readonly params: FuelTypes.Greeter.type6;
      /** The block in which this event was recorded. Configurable via `field_selection` in config.yaml. */
      readonly block: FuelBlock;
      /** The transaction that triggered this event. Configurable via `field_selection` in config.yaml. */
      readonly transaction: FuelTransaction;
      /** The index of this event's log within the block. */
      readonly logIndex: number;
      /** The address of the contract that emitted this event. */
      readonly srcAddress: Address;
    };
    "ClearGreeting": {
      /** The name of the event. */
      readonly eventName: "ClearGreeting";
      /** The name of the contract that emitted this event. */
      readonly contractName: "Greeter";
      /** The unique identifier of the blockchain network where this event occurred. */
      readonly chainId: 0;
      /** The parameters or arguments associated with this event. */
      readonly params: FuelTypes.Greeter.type4;
      /** The block in which this event was recorded. Configurable via `field_selection` in config.yaml. */
      readonly block: FuelBlock;
      /** The transaction that triggered this event. Configurable via `field_selection` in config.yaml. */
      readonly transaction: FuelTransaction;
      /** The index of this event's log within the block. */
      readonly logIndex: number;
      /** The address of the contract that emitted this event. */
      readonly srcAddress: Address;
    };
  };
      }; eventFilters: {} };
      entities: Entities;
      perChainEntities: never;
      enums: Enums;
    };
  }

  export type EmptyEntity = Entities["EmptyEntity"];
}
