packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__envio_types_dts_generated_for_svm.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: project_template.envio_types_dts
---
/**
 * This file is generated by HyperIndex codegen from config.yaml and schema.graphql.
 * Do not edit manually.
 * If your project's types look out of date, run `envio codegen`
 * (or your package manager's `codegen` script, e.g. `pnpm codegen`).
 */

import type { Address, BigDecimal, JSON, SingleOrMultiple } from "envio";

declare namespace FuelTypes {}
type Enums = {};
type Entities = {
  "EmptyEntity": {
    readonly "id": string;
    readonly "emptyField": string;
  };
};

declare module "envio" {
  interface Global {
    config: {
      svm: { chains: {
  "7565164": { id: 7565164 };
      }; programs: {
        "TokenMetadata": {
          "CreateMetadataAccountV3": { readonly args: never; readonly accounts: { readonly metadata: string; readonly mint: string; readonly mint_authority: string; readonly payer: string; readonly update_authority: string; readonly system_program: string; readonly rent: string } };
          "UpdateMetadataAccountV2": { readonly args: never; readonly accounts: { readonly metadata: string; readonly update_authority: string } };
        };
      } };
      entities: Entities;
      perChainEntities: never;
      enums: Enums;
    };
  }

  export type EmptyEntity = Entities["EmptyEntity"];
}
