packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__event_template_named_struct_rescript_snapshot.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: template.module_code
---

let name = "CreateLockupTranchedStream"
let contractName = contractName
type params = {streamId: bigint, commonParams: {"funder": Address.t, "sender": Address.t, "recipient": Address.t, "amounts": {"deposit": bigint, "brokerFee": bigint}, "token": Address.t, "cancelable": bool, "transferable": bool, "timestamps": {"start": bigint, "end": bigint}, "shape": string, "broker": Address.t}, tranches: array<{"amount": bigint, "timestamp": bigint}>}
/** Event params with all fields optional. Missing fields use default values. */
type paramsConstructor = {streamId?: bigint, commonParams?: (Address.t, Address.t, Address.t, (bigint, bigint), Address.t, bool, bool, (bigint, bigint), string, Address.t), tranches?: array<(bigint, bigint)>}
type block = Block.t
type transaction = Transaction.t

type event = {
  /** The name of the contract that emitted this event. */
  contractName: string,
  /** The name of the event. */
  eventName: string,
  /** The parameters or arguments associated with this event. */
  params: params,
  /** The unique identifier of the blockchain network where this event occurred. */
  chainId: chainId,
  /** The address of the contract that emitted this event. */
  srcAddress: Address.t,
  /** The index of this event's log within the block. */
  logIndex: int,
  /** The transaction that triggered this event. Configurable in `config.yaml` via the `field_selection` option. */
  transaction: transaction,
  /** The block in which this event was recorded. Configurable in `config.yaml` via the `field_selection` option. */
  block: block,
}

@genType
type handlerArgs = Internal.genericHandlerArgs<event, handlerContext>
@genType
type handler = Internal.genericHandler<handlerArgs>
@genType
type contractRegister = Internal.genericContractRegister<Internal.genericContractRegisterArgs<event, contractRegistrations>>

@genType
type eventFilter = {@as("streamId") streamId?: SingleOrMultiple.t<bigint>}

@genType type eventFiltersArgs = {/** The unique identifier of the blockchain network where this event occurred. */ chainId: chainId, /** Addresses of the contracts indexing the event. */ addresses: array<Address.t>}

@genType @unboxed type eventFiltersDefinition = Single(eventFilter) | Multiple(array<eventFilter>) | @as(false) Skip | @as(true) Keep

@genType @unboxed type eventFilters = | ...eventFiltersDefinition | Dynamic(eventFiltersArgs => eventFiltersDefinition)

let contractRegister: fnWithEventConfig<
  Internal.genericContractRegister<
    Internal.genericContractRegisterArgs<event, contractRegistrations>,
  >,
  HandlerTypes.eventConfig<eventFilters>,
> = (contractRegister, ~eventConfig=?) =>
  HandlerRegister.setContractRegister(
    ~contractName,
    ~eventName=name,
    contractRegister,
    ~eventOptions=eventConfig,
  )

let handler: fnWithEventConfig<
  Internal.genericHandler<Internal.genericHandlerArgs<event, handlerContext>>,
  HandlerTypes.eventConfig<eventFilters>,
> = (handler, ~eventConfig=?) => {
  HandlerRegister.setHandler(
    ~contractName,
    ~eventName=name,
    handler->(
      Utils.magic: Internal.genericHandler<
        Internal.genericHandlerArgs<event, handlerContext>,
      > => Internal.genericHandler<
        Internal.genericHandlerArgs<event, Internal.handlerContext>,
      >
    ),
    ~eventOptions=eventConfig,
  )
}
