packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__event_template_svm_instruction_rescript_snapshot.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: template.module_code
---

let name = "CreateMetadataAccountV3"
let contractName = contractName
type params = Envio.svmDecodedInstruction
type paramsConstructor = unit
type event = Envio.svmInstruction
type onEventWhere = Internal.noOnEventWhere
