packages/cli/src/hbs_templating/snapshots/envio__hbs_templating__codegen_templates__test__event_template_with_custom_field_selection.snap
---
source: packages/cli/src/hbs_templating/codegen_templates.rs
expression: event_template.module_code
---

let name = "NewGravatar"
let contractName = contractName

@genType
type eventArgs = unit
/** Event params with all fields optional. Missing fields use default values. */
type paramsConstructor = unit
@genType
type block = {number: int, timestamp: int, hash: string}
@genType
type transaction = {from: option<Address.t>}

@genType
type event = {
/** The parameters or arguments associated with this event. */
params: eventArgs,
/** The unique identifier of the blockchain network where this event occurred. */
chainId: chainId,
/** The address of the contract that emitted this event. */
srcAddress: Address.t,
/** The index of this event's log within the block. */
logIndex: int,
/** The transaction that triggered this event. Configurable in `config.yaml` via the `field_selection` option. */
transaction: transaction,
/** The block in which this event was recorded. Configurable in `config.yaml` via the `field_selection` option. */
block: block,
}

@genType
type handlerArgs = Internal.genericHandlerArgs<event, handlerContext>
@genType
type handler = Internal.genericHandler<handlerArgs>
@genType
type contractRegister = Internal.genericContractRegister<Internal.genericContractRegisterArgs<event, contractRegistrations>>

@genType
type eventFilter = {}

@genType type eventFilters = Internal.noEventFilters

let contractRegister: fnWithEventConfig<
  Internal.genericContractRegister<
    Internal.genericContractRegisterArgs<event, contractRegistrations>,
  >,
  HandlerTypes.eventConfig<eventFilters>,
> = (contractRegister, ~eventConfig=?) =>
  HandlerRegister.setContractRegister(
    ~contractName,
    ~eventName=name,
    contractRegister,
    ~eventOptions=eventConfig,
  )

let handler: fnWithEventConfig<
  Internal.genericHandler<Internal.genericHandlerArgs<event, handlerContext>>,
  HandlerTypes.eventConfig<eventFilters>,
> = (handler, ~eventConfig=?) => {
  HandlerRegister.setHandler(
    ~contractName,
    ~eventName=name,
    handler->(
      Utils.magic: Internal.genericHandler<
        Internal.genericHandlerArgs<event, handlerContext>,
      > => Internal.genericHandler<
        Internal.genericHandlerArgs<event, Internal.handlerContext>,
      >
    ),
    ~eventOptions=eventConfig,
  )
}
